product revised content

--- a/contact.html
+++ b/contact.html
@@ -147,6 +147,17 @@
         </div>
     </section>
 
+    <!-- Contact Highlights (mirrors live site) -->
+    <section class="contact-highlights" aria-hidden="false">
+        <div class="container">
+            <div class="phone-cta">
+                <h2>Talk to an expert</h2>
+                <p class="phone-number"><a href="tel:+917708097242">+91 77080 97242</a> | <a href="tel:+916384063034">+91 63840 63034</a></p>
+                <p class="contact-note">Request a callback or email us at <a href="mailto:info@susin.in">info@susin.in</a></p>
+            </div>
+        </div>
+    </section>
+
     <!-- Contact Section -->
     <section class="contact-section">
         <div class="container">
@@ -189,36 +200,56 @@
                     <div id="locations" class="locations-section">
                         <h3 class="office-heading">Other Office Locations</h3>
                         <div class="office-locations">
-                            <div class="office-item">
-                                <h4>Mumbai Office</h4>
-                                <p><strong>Address:</strong> Regus Business Centre, Level-1, Tiffany Building, Hiranandani Estate, Thane West– 400607, Maharashtra, India</p>
-                                <p><strong>Phone:</strong> +91 74003 55579 (Mr. Sanjey Ruley)</p>
-                                <p><strong>Email:</strong> sruley@regulusss.com</p>
-                            </div>
-                            <div class="office-item">
-                                <h4>UAE Office</h4>
-                                <p><strong>Address:</strong> SUSIN I-TORK ME FZC Y-61, SAIF SUIT, SAIF ZONE SHARJAH, UAE PO Box No: 122643</p>
-                                <p><strong>Phone:</strong> +971-56810 3434 (Mr. Nivin), +971-50206 5541 (Mr. Vijay Shankar)</p>
-                                <p><strong>Email:</strong> info@susinitorkme.com</p>
-                            </div>
-                            <div class="office-item">
-                                <h4>Qatar Office</h4>
-                                <p><strong>Address:</strong> Building No.6, 2nd Floor, Office 46 Barwa Commercial Avenue, Abu Hamour P.O. Box - 220, Doha - Qatar</p>
-                                <p><strong>Phone:</strong> +974-3164 8923 (Mr. Ragav), +974-3370 8598</p>
-                                <p><strong>Email:</strong> sales@susinqatar.com</p>
-                            </div>
-                            <div class="office-item">
-                                <h4>Oman Office</h4>
-                                <p><strong>Address:</strong> Gulf Energy Building, Building No: 1/21, Road No: 5001, Near Al Nadha Tower, Ghala North, Muscat, Sultanate of Oman</p>
-                                <p><strong>Phone:</strong> +968 78489305 (Mr. Vaitheeswaran), +968 99836012</p>
-                                <p><strong>Email:</strong> sales@susinitorkme.com</p>
-                            </div>
-                            <div class="office-item">
-                                <h4>Europe Office (KTC Controls)</h4>
-                                <p><strong>Address:</strong> KTC CONTROLS Krähenweg 11, 2459 Hamburg, Germany</p>
-                                <p><strong>Phone:</strong> +49-(0)151 54 32 92 55 (Carsten Teichler), +49-(0)40-5714 752-12</p>
-                                <p><strong>Email:</strong> info@ktc-systemtechnik.de</p>
-                            </div>
+                                <div class="office-item">
+                                    <picture>
+                                        <source srcset="assets/img/contact/mumbai.webp" type="image/webp">
+                                        <img src="assets/img/contact/mumbai.jpg" alt="Mumbai office" class="office-image" loading="lazy" decoding="async">
+                                    </picture>
+                                    <h4>Mumbai Office</h4>
+                                    <p><strong>Address:</strong> Regus Business Centre, Level-1, Tiffany Building, Hiranandani Estate, Thane West– 400607, Maharashtra, India</p>
+                                    <p><strong>Phone:</strong> +91 74003 55579 (Mr. Sanjey Ruley)</p>
+                                    <p><strong>Email:</strong> sruley@regulusss.com</p>
+                                </div>
+                                <div class="office-item">
+                                    <picture>
+                                        <source srcset="assets/img/contact/uae.webp" type="image/webp">
+                                        <img src="assets/img/contact/uae.png" alt="UAE office" class="office-image" loading="lazy" decoding="async">
+                                    </picture>
+                                    <h4>UAE Office</h4>
+                                    <p><strong>Address:</strong> SUSIN I-TORK ME FZC Y-61, SAIF SUIT, SAIF ZONE SHARJAH, UAE PO Box No: 122643</p>
+                                    <p><strong>Phone:</strong> +971-56810 3434 (Mr. Nivin), +971-50206 5541 (Mr. Vijay Shankar)</p>
+                                    <p><strong>Email:</strong> info@susinitorkme.com</p>
+                                </div>
+                                <div class="office-item">
+                                    <picture>
+                                        <source srcset="assets/img/contact/qatar.webp" type="image/webp">
+                                        <img src="assets/img/contact/qatar.jpg" alt="Qatar office" class="office-image" loading="lazy" decoding="async">
+                                    </picture>
+                                    <h4>Qatar Office</h4>
+                                    <p><strong>Address:</strong> Building No.6, 2nd Floor, Office 46 Barwa Commercial Avenue, Abu Hamour P.O. Box - 220, Doha - Qatar</p>
+                                    <p><strong>Phone:</strong> +974-3164 8923 (Mr. Ragav), +974-3370 8598</p>
+                                    <p><strong>Email:</strong> sales@susinqatar.com</p>
+                                </div>
+                                <div class="office-item">
+                                    <picture>
+                                        <source srcset="assets/img/contact/oman.webp" type="image/webp">
+                                        <img src="assets/img/contact/oman.png" alt="Oman office" class="office-image" loading="lazy" decoding="async">
+                                    </picture>
+                                    <h4>Oman Office</h4>
+                                    <p><strong>Address:</strong> Gulf Energy Building, Building No: 1/21, Road No: 5001, Near Al Nadha Tower, Ghala North, Muscat, Sultanate of Oman</p>
+                                    <p><strong>Phone:</strong> +968 78489305 (Mr. Vaitheeswaran), +968 99836012</p>
+                                    <p><strong>Email:</strong> sales@susinitorkme.com</p>
+                                </div>
+                                <div class="office-item">
+                                    <picture>
+                                        <source srcset="assets/img/contact/europe.webp" type="image/webp">
+                                        <img src="assets/img/contact/europe.jpg" alt="Europe office" class="office-image" loading="lazy" decoding="async">
+                                    </picture>
+                                    <h4>Europe Office (KTC Controls)</h4>
+                                    <p><strong>Address:</strong> KTC CONTROLS Krähenweg 11, 2459 Hamburg, Germany</p>
+                                    <p><strong>Phone:</strong> +49-(0)151 54 32 92 55 (Carsten Teichler), +49-(0)40-5714 752-12</p>
+                                    <p><strong>Email:</strong> info@ktc-systemtechnik.de</p>
+                                </div>
                         </div>
                     </div>
                 </div>
