--- a/products-actuators-gearboxes.html
+++ b/products-actuators-gearboxes.html
@@ -143,8 +143,14 @@
         <div class="container">
             <div class="product-detail">
                 <div class="product-image">
-                    <img src="https://www.susingroup.com/assets/img/products/pneumatic/pds-actuator.jpg" alt="PDS Pneumatic Scotch Yoke Rotary Actuator" class="product-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 50vw" fetchpriority="low">
-                    <img src="https://www.susingroup.com/assets/img/products/pneumatic/hd-actuator.jpg" alt="HD Pneumatic Actuator" class="product-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 50vw" fetchpriority="low">
+                    <picture>
+                        <source srcset="assets/img/products/pneumatic/pds-actuator.webp" type="image/webp">
+                        <img src="assets/img/products/pneumatic/pds-actuator.jpg" alt="PDS Pneumatic Scotch Yoke Rotary Actuator" class="product-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 50vw" fetchpriority="low">
+                    </picture>
+                    <picture>
+                        <source srcset="assets/img/products/pneumatic/hd-actuator.webp" type="image/webp">
+                        <img src="assets/img/products/pneumatic/hd-actuator.jpg" alt="HD Pneumatic Actuator" class="product-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 50vw" fetchpriority="low">
+                    </picture>
                 </div>
                 <div class="product-content">
                     <h2>Pneumatic Scotch Yoke Rotary Actuators</h2>
@@ -207,7 +213,10 @@
         <div class="container">
             <div class="product-detail reverse">
                 <div class="product-image">
-                    <img src="https://www.susingroup.com/assets/img/products/mechanical/itg-series.jpg" alt="ITG Series Mechanical Worm Gear Actuator" class="product-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 50vw" fetchpriority="low">
+                    <picture>
+                        <source srcset="assets/img/products/mechanical/itg-series.webp" type="image/webp">
+                        <img src="assets/img/products/mechanical/itg-series.jpg" alt="ITG Series Mechanical Worm Gear Actuator" class="product-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 50vw" fetchpriority="low">
+                    </picture>
                 </div>
                 <div class="product-content">
                     <h2>Gearboxes</h2>
@@ -270,7 +279,10 @@
         <div class="container">
             <div class="product-detail">
                 <div class="product-image">
-                    <img src="https://www.susingroup.com/assets/img/products/hydraulic/electro-hydraulic-actuator.jpg" alt="Electro-Hydraulic Actuator" class="product-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 50vw" fetchpriority="low">
+                    <picture>
+                        <source srcset="assets/img/products/hydraulic/electro-hydraulic-actuator.webp" type="image/webp">
+                        <img src="assets/img/products/hydraulic/electro-hydraulic-actuator.jpg" alt="Electro-Hydraulic Actuator" class="product-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 50vw" fetchpriority="low">
+                    </picture>
                 </div>
                 <div class="product-content">
                     <h2>Electro-Hydraulic Actuators</h2>
@@ -332,7 +344,10 @@
         <div class="container">
             <div class="product-detail reverse">
                 <div class="product-image">
-                    <img src="https://www.susingroup.com/assets/img/products/electrical/itq-series.jpg" alt="ITQ Series Electrical Rotary Actuator" class="product-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 50vw" fetchpriority="low">
+                    <picture>
+                        <source srcset="assets/img/products/electrical/itq-series.webp" type="image/webp">
+                        <img src="assets/img/products/electrical/itq-series.jpg" alt="ITQ Series Electrical Rotary Actuator" class="product-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 50vw" fetchpriority="low">
+                    </picture>
                 </div>
                 <div class="product-content">
                     <h2>Electrical Actuators</h2>
