--- a/industries-served.html
+++ b/industries-served.html
@@ -143,7 +143,10 @@
         <div class="container">
             <div class="industry-card">
                 <div class="industry-icon">
-                    <img src="http://www.susingroup.com/uploads/recent_project/20240731-095344-17224196248255.jfif" alt="Oil & Gas project" class="industry-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 33vw" fetchpriority="low">
+                    <picture>
+                        <source srcset="assets/img/industries/oil-gas.webp" type="image/webp">
+                        <img src="assets/img/industries/oil-gas.jpg" alt="Oil & Gas project" class="industry-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 33vw" fetchpriority="low">
+                    </picture>
                 </div>
                 <h2>Oil & Gas</h2>
                 <p>Critical valve automation solutions for upstream exploration, midstream transportation, and downstream refining operations. Our actuators are designed to withstand extreme temperatures, high pressures, and corrosive environments typical in oil and gas applications.</p>
@@ -159,7 +162,10 @@
 
             <div class="industry-card">
                 <div class="industry-icon">
-                    <img src="http://www.susingroup.com/uploads/category_thumbnail_image/20250514-114327-17472230071145.JPG" alt="Water treatment plant" class="industry-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 33vw" fetchpriority="low">
+                    <picture>
+                        <source srcset="assets/img/industries/water-treatment.webp" type="image/webp">
+                        <img src="assets/img/industries/water-treatment.jpg" alt="Water treatment plant" class="industry-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 33vw" fetchpriority="low">
+                    </picture>
                 </div>
                 <h2>Water Treatment</h2>
                 <p>Reliable actuators for water and wastewater treatment facilities, ensuring precise control of valves and gates in critical water management processes. Our solutions meet stringent water quality and environmental standards.</p>
@@ -175,7 +181,10 @@
 
             <div class="industry-card">
                 <div class="industry-icon">
-                    <img src="http://www.susingroup.com/assets/img/global-presence/germany.jpg" alt="Power plant" class="industry-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 33vw" fetchpriority="low">
+                    <picture>
+                        <source srcset="assets/img/industries/power-generation.webp" type="image/webp">
+                        <img src="assets/img/industries/power-generation.jpg" alt="Power plant" class="industry-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 33vw" fetchpriority="low">
+                    </picture>
                 </div>
                 <h2>Power Generation</h2>
                 <p>High-performance solutions for thermal, nuclear, and renewable energy facilities. Our actuators provide reliable operation in power plants where downtime is not an option.</p>
@@ -191,7 +200,10 @@
 
             <div class="industry-card">
                 <div class="industry-icon">
-                    <img src="http://www.susingroup.com/uploads/category_thumbnail_image/20250514-095924-17472167644310.png" alt="Chemical processing" class="industry-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 33vw" fetchpriority="low">
+                    <picture>
+                        <source srcset="assets/img/industries/chemical.webp" type="image/webp">
+                        <img src="assets/img/industries/chemical.png" alt="Chemical processing" class="industry-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 33vw" fetchpriority="low">
+                    </picture>
                 </div>
                 <h2>Chemical Processing</h2>
                 <p>Corrosion-resistant actuators designed for harsh chemical environments. Our products handle aggressive chemicals, high temperatures, and demanding process conditions while maintaining reliability and precision.</p>
@@ -207,7 +219,10 @@
 
             <div class="industry-card">
                 <div class="industry-icon">
-                    <img src="http://www.susingroup.com/uploads/recent_project/20240731-094855-17224193357774.jpg" alt="Marine and offshore project" class="industry-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 33vw" fetchpriority="low">
+                    <picture>
+                        <source srcset="assets/img/industries/marine.webp" type="image/webp">
+                        <img src="assets/img/industries/marine.jpg" alt="Marine and offshore project" class="industry-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 33vw" fetchpriority="low">
+                    </picture>
                 </div>
                 <h2>Marine & Offshore</h2>
                 <p>Rugged solutions engineered for marine and offshore applications, designed to withstand saltwater exposure, extreme weather conditions, and the demanding requirements of maritime operations.</p>
@@ -223,7 +238,10 @@
 
             <div class="industry-card">
                 <div class="industry-icon">
-                    <img src="http://www.susingroup.com/uploads/category_thumbnail_image/20250514-115923-17472239635687.jpg" alt="Pharmaceutical manufacturing" class="industry-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 33vw" fetchpriority="low">
+                    <picture>
+                        <source srcset="assets/img/industries/pharmaceutical.webp" type="image/webp">
+                        <img src="assets/img/industries/pharmaceutical.jpg" alt="Pharmaceutical manufacturing" class="industry-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 33vw" fetchpriority="low">
+                    </picture>
                 </div>
                 <h2>Pharmaceutical</h2>
                 <p>Precision actuators meeting strict hygiene and quality standards required in pharmaceutical manufacturing. Our solutions ensure clean, precise control in sterile environments.</p>
@@ -239,7 +257,10 @@
 
             <div class="industry-card">
                 <div class="industry-icon">
-                    <img src="http://www.susingroup.com/uploads/recent_project/20240731-092632-17224179928266.jpg" alt="Mining operations" class="industry-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 33vw" fetchpriority="low">
+                    <picture>
+                        <source srcset="assets/img/industries/mining.webp" type="image/webp">
+                        <img src="assets/img/industries/mining.jpg" alt="Mining operations" class="industry-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 33vw" fetchpriority="low">
+                    </picture>
                 </div>
                 <h2>Mining & Minerals</h2>
                 <p>Heavy-duty actuators built to handle the extreme conditions of mining operations, including dust, vibration, and heavy loads.</p>
@@ -255,7 +276,10 @@
 
             <div class="industry-card">
                 <div class="industry-icon">
-                    <img src="http://www.susingroup.com/uploads/category_thumbnail_image/20250614-233653-17499244132777.png" alt="Food and beverage" class="industry-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 33vw" fetchpriority="low">
+                    <picture>
+                        <source srcset="assets/img/industries/food-beverage.webp" type="image/webp">
+                        <img src="assets/img/industries/food-beverage.png" alt="Food and beverage" class="industry-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 33vw" fetchpriority="low">
+                    </picture>
                 </div>
                 <h2>Food & Beverage</h2>
                 <p>Hygienic actuators designed for food and beverage processing, meeting FDA and food safety standards with easy-clean designs.</p>
