--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="HandheldFriendly" content="true">
+        <meta name="mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="format-detection" content="telephone=no">
+        <meta name="theme-color" content="#c41e3a">
+        <link rel="apple-touch-icon" href="assets/img/icons/apple-touch-icon.png">
+        <meta name="robots" content="index, follow">
+        <meta property="og:site_name" content="Susin Group">
+        <meta name="twitter:site" content="@susingroup">
+        <meta name="twitter:creator" content="@susingroup">
         <title>Industrial Actuators & Gearboxes | Advanced Motion Control Solutions</title>
         <meta name="description" content="Leading manufacturer of actuators and gearboxes — Pneumatic, Electro-Hydraulic and Electrical actuators for critical industrial applications worldwide.">
         <link rel="canonical" href="https://www.susingroup.com/index.html" />
