--- a/resources-technical-docs.html
+++ b/resources-technical-docs.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#0a6ebd">
+    <meta name="format-detection" content="telephone=no">
+    <link rel="apple-touch-icon" href="logo.jpg">
     <title>Resources — Datasheets, Manuals & Sizing Tools</title>
     <meta name="description" content="Datasheets, manuals, sizing programs, FAQs and technical resources for Susin Group products and solutions.">
     <link rel="canonical" href="https://www.susingroup.com/resources-technical-docs.html" />
@@ -92,6 +95,16 @@
                             <li><a href="about-industrial-actuators.html#mission">Mission & Values</a></li>
                             <li><a href="about-industrial-actuators.html#certifications">Certifications</a></li>
                             <li><a href="about-industrial-actuators.html#why-choose">Why Choose Us</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="has-sub">Global Presence <i class="fas fa-chevron-down"></i></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="index.html#india">India</a></li>
+                            <li><a href="index.html#middle-east">Middle East</a></li>
+                            <li><a href="index.html#asia-pacific">Asia Pacific</a></li>
+                            <li><a href="index.html#europe">Europe</a></li>
+                            <li><a href="index.html#americas">Americas</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -226,46 +239,46 @@
             <!-- Sizing Programs Tab -->
             <div class="tab-content" id="sizing-programs">
                 <h2>Actuators Sizing Programs</h2>
-                <p class="section-subtitle" style="text-align: center; margin-bottom: 3rem;">Interactive sizing tools to help you select the right actuator or gearbox for your application</p>
+                <p class="section-subtitle">Interactive sizing tools to help you select the right actuator or gearbox for your application</p>
                 
                 <div class="download-grid">
                     <div class="download-item">
                         <i class="fas fa-calculator"></i>
                         <h3>Pneumatic Actuator Sizing Program</h3>
                         <p>Calculate the correct pneumatic actuator size based on valve torque requirements, operating pressure, and application parameters. This tool helps you select the optimal PDS or HD series actuator.</p>
-                        <div style="margin-top: 1.5rem;">
+                        <div class="feature-block">
                             <strong>Features:</strong>
-                            <ul style="text-align: left; margin-top: 0.5rem; padding-left: 1.5rem;">
+                            <ul class="feature-list">
                                 <li>Torque calculation based on valve size and type</li>
                                 <li>Operating pressure optimization</li>
                                 <li>Safety factor recommendations</li>
                                 <li>Model selection guide</li>
                             </ul>
                         </div>
-                        <a href="https://www.susingroup.com/tools/pneumatic-actuator-sizing" target="_blank" class="btn btn-primary" style="margin-top: 1.5rem;">Launch Sizing Tool</a>
-                        <a href="https://www.susingroup.com/downloads/sizing-programs/pneumatic-actuator-sizing-guide.pdf" target="_blank" class="btn btn-outline" style="margin-top: 0.5rem; display: block;">Download Guide</a>
+                        <a href="https://www.susingroup.com/tools/pneumatic-actuator-sizing" target="_blank" class="btn btn-primary btn-cta">Launch Sizing Tool</a>
+                        <a href="https://www.susingroup.com/downloads/sizing-programs/pneumatic-actuator-sizing-guide.pdf" target="_blank" class="btn btn-outline btn-block small-mt">Download Guide</a>
                     </div>
                     
                     <div class="download-item">
                         <i class="fas fa-cogs"></i>
                         <h3>Gearbox Sizing Program</h3>
                         <p>Determine the appropriate gearbox size and ratio for your application. Calculate torque requirements, speed reduction, and efficiency for ITG series mechanical worm gear actuators.</p>
-                        <div style="margin-top: 1.5rem;">
+                        <div class="feature-block">
                             <strong>Features:</strong>
-                            <ul style="text-align: left; margin-top: 0.5rem; padding-left: 1.5rem;">
+                            <ul class="feature-list">
                                 <li>Gear ratio calculation</li>
                                 <li>Torque capacity analysis</li>
                                 <li>Efficiency optimization</li>
                                 <li>Mounting configuration selection</li>
                             </ul>
                         </div>
-                        <a href="https://www.susingroup.com/tools/gearbox-sizing" target="_blank" class="btn btn-primary" style="margin-top: 1.5rem;">Launch Sizing Tool</a>
-                        <a href="https://www.susingroup.com/downloads/sizing-programs/gearbox-sizing-guide.pdf" target="_blank" class="btn btn-outline" style="margin-top: 0.5rem; display: block;">Download Guide</a>
+                        <a href="https://www.susingroup.com/tools/gearbox-sizing" target="_blank" class="btn btn-primary btn-cta">Launch Sizing Tool</a>
+                        <a href="https://www.susingroup.com/downloads/sizing-programs/gearbox-sizing-guide.pdf" target="_blank" class="btn btn-outline btn-block small-mt">Download Guide</a>
                     </div>
                 </div>
 
-                <div style="background-color: var(--section-bg); padding: 3rem; border-radius: 12px; margin-top: 3rem; border: 1px solid var(--border-color);">
-                    <h3 style="color: var(--primary-color); margin-bottom: 1.5rem; text-align: center;">How to Use the Sizing Programs</h3>
-                    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 2rem;">
+                <div class="sizing-panel">
+                    <h3 class="sizing-panel-title">How to Use the Sizing Programs</h3>
+                    <div class="sizing-grid">
                         <div>
-                            <h4 style="color: var(--primary-color); margin-bottom: 1rem;
+                            <h4 class="sizing-subtitle">
