--- a/index.html
+++ b/index.html
@@ -99,6 +99,16 @@
                         </ul>
                     </li>
                     <li class="dropdown">
+                        <a href="#">Global Presence <i class="fas fa-chevron-down"></i></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="index.html#india">India</a></li>
+                            <li><a href="index.html#middle-east">Middle East</a></li>
+                            <li><a href="index.html#europe">Europe</a></li>
+                            <li><a href="index.html#far-east">Far East</a></li>
+                            <li><a href="index.html#recent-projects">Recent Projects</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
                         <a href="about-industrial-actuators.html">About Us <i class="fas fa-chevron-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="about.html#story">Our Story</a></li>
