--- a/products-actuators-gearboxes.html
+++ b/products-actuators-gearboxes.html
@@ -164,12 +164,12 @@
             <div class="product-detail">
                 <div class="product-image">
                     <picture>
-                        <source srcset="assets/img/products/pneumatic/pds-actuator.webp" type="image/webp">
-                        <img src="assets/img/products/pneumatic/pds-actuator.jpg" alt="PDS Pneumatic Scotch Yoke Rotary Actuator" class="product-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 50vw" fetchpriority="low">
+                        <source type="image/webp" srcset="assets/img/products/pneumatic/pds-actuator-320.webp 320w, assets/img/products/pneumatic/pds-actuator-640.webp 640w, assets/img/products/pneumatic/pds-actuator-1024.webp 1024w" sizes="(max-width:600px) 100vw, 50vw">
+                        <img src="assets/img/products/pneumatic/pds-actuator.jpg" srcset="assets/img/products/pneumatic/pds-actuator-320.jpg 320w, assets/img/products/pneumatic/pds-actuator-640.jpg 640w, assets/img/products/pneumatic/pds-actuator-1024.jpg 1024w" alt="PDS Pneumatic Scotch Yoke Rotary Actuator" class="product-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 50vw" fetchpriority="low">
                     </picture>
                     <picture>
-                        <source srcset="assets/img/products/pneumatic/hd-actuator.webp" type="image/webp">
-                        <img src="assets/img/products/pneumatic/hd-actuator.jpg" alt="HD Pneumatic Actuator" class="product-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 50vw" fetchpriority="low">
+                        <source type="image/webp" srcset="assets/img/products/pneumatic/hd-actuator-320.webp 320w, assets/img/products/pneumatic/hd-actuator-640.webp 640w, assets/img/products/pneumatic/hd-actuator-1024.webp 1024w" sizes="(max-width:600px) 100vw, 50vw">
+                        <img src="assets/img/products/pneumatic/hd-actuator.jpg" srcset="assets/img/products/pneumatic/hd-actuator-320.jpg 320w, assets/img/products/pneumatic/hd-actuator-640.jpg 640w, assets/img/products/pneumatic/hd-actuator-1024.jpg 1024w" alt="HD Pneumatic Actuator" class="product-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 50vw" fetchpriority="low">
                     </picture>
                 </div>
                 <div class="product-content">
@@ -234,8 +234,8 @@
             <div class="product-detail reverse">
                 <div class="product-image">
                     <picture>
-                        <source srcset="assets/img/products/mechanical/itg-series.webp" type="image/webp">
-                        <img src="assets/img/products/mechanical/itg-series.jpg" alt="ITG Series Mechanical Worm Gear Actuator" class="product-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 50vw" fetchpriority="low">
+                        <source type="image/webp" srcset="assets/img/products/mechanical/itg-series-320.webp 320w, assets/img/products/mechanical/itg-series-640.webp 640w, assets/img/products/mechanical/itg-series-1024.webp 1024w" sizes="(max-width:600px) 100vw, 50vw">
+                        <img src="assets/img/products/mechanical/itg-series.jpg" srcset="assets/img/products/mechanical/itg-series-320.jpg 320w, assets/img/products/mechanical/itg-series-640.jpg 640w, assets/img/products/mechanical/itg-series-1024.jpg 1024w" alt="ITG Series Mechanical Worm Gear Actuator" class="product-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 50vw" fetchpriority="low">
                     </picture>
                 </div>
                 <div class="product-content">
@@ -300,8 +300,8 @@
             <div class="product-detail">
                 <div class="product-image">
                     <picture>
-                        <source srcset="assets/img/products/hydraulic/electro-hydraulic-actuator.webp" type="image/webp">
-                        <img src="assets/img/products/hydraulic/electro-hydraulic-actuator.jpg" alt="Electro-Hydraulic Actuator" class="product-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 50vw" fetchpriority="low">
+                        <source type="image/webp" srcset="assets/img/products/hydraulic/electro-hydraulic-actuator-320.webp 320w, assets/img/products/hydraulic/electro-hydraulic-actuator-640.webp 640w, assets/img/products/hydraulic/electro-hydraulic-actuator-1024.webp 1024w" sizes="(max-width:600px) 100vw, 50vw">
+                        <img src="assets/img/products/hydraulic/electro-hydraulic-actuator.jpg" srcset="assets/img/products/hydraulic/electro-hydraulic-actuator-320.jpg 320w, assets/img/products/hydraulic/electro-hydraulic-actuator-640.jpg 640w, assets/img/products/hydraulic/electro-hydraulic-actuator-1024.jpg 1024w" alt="Electro-Hydraulic Actuator" class="product-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 50vw" fetchpriority="low">
                     </picture>
                 </div>
                 <div class="product-content">
@@ -365,8 +365,8 @@
             <div class="product-detail reverse">
                 <div class="product-image">
                     <picture>
-                        <source srcset="assets/img/products/electrical/itq-series.webp" type="image/webp">
-                        <img src="assets/img/products/electrical/itq-series.jpg" alt="ITQ Series Electrical Rotary Actuator" class="product-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 50vw" fetchpriority="low">
+                        <source type="image/webp" srcset="assets/img/products/electrical/itq-series-320.webp 320w, assets/img/products/electrical/itq-series-640.webp 640w, assets/img/products/electrical/itq-series-1024.webp 1024w" sizes="(max-width:600px) 100vw, 50vw">
+                        <img src="assets/img/products/electrical/itq-series.jpg" srcset="assets/img/products/electrical/itq-series-320.jpg 320w, assets/img/products/electrical/itq-series-640.jpg 640w, assets/img/products/electrical/itq-series-1024.jpg 1024w" alt="ITQ Series Electrical Rotary Actuator" class="product-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 50vw" fetchpriority="low">
                     </picture>
                 </div>
                 <div class="product-content">
