about industries updates

--- a/contact-support-sales.html
+++ b/contact-support-sales.html
@@ -109,6 +109,16 @@
                         </ul>
                     </li>
                     <li class="dropdown">
+                        <a href="#">Global Presence <i class="fas fa-chevron-down"></i></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="index.html#india">India</a></li>
+                            <li><a href="index.html#middle-east">Middle East</a></li>
+                            <li><a href="index.html#europe">Europe</a></li>
+                            <li><a href="index.html#far-east">Far East</a></li>
+                            <li><a href="index.html#recent-projects">Recent Projects</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
                         <a href="contact-support-sales.html" class="active">Contact <i class="fas fa-chevron-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="contact-support-sales.html#contact-form">Contact Form</a></li>
