--- a/about.html
+++ b/about.html
@@ -53,6 +53,24 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="container">
+            <!-- Top utility bar (double-layer header) -->
+            <div class="topbar" role="region" aria-label="Top utility bar">
+                <div class="topbar-inner">
+                    <div class="topbar-left">
+                        <a href="tel:+917708097242" class="topbar-contact"><i class="fas fa-phone"></i> +91 77080 97242</a>
+                        <a href="mailto:info@susin.in" class="topbar-contact"><i class="fas fa-envelope"></i> info@susin.in</a>
+                    </div>
+                    <div class="topbar-right">
+                        <a href="index.html#recent-projects" class="topbar-link">Recent Projects</a>
+                        <a href="#" class="topbar-link">Global Presence</a>
+                        <div class="topbar-actions">
+                            <button id="openSearchTop" class="btn btn-secondary" aria-label="Open search"><i class="fas fa-search"></i></button>
+                            <button id="chatToggleTop" class="btn btn-secondary" aria-label="Open chat"><i class="fas fa-headset"></i></button>
+                            <button id="employeeLoginBtn" class="btn btn-outline topbar-login" aria-label="Employee login"><i class="fas fa-user-lock"></i></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="nav-wrapper">
                 <a href="index.html" class="logo">
                     <img src="logo.jpg" alt="Company Logo" loading="lazy" decoding="async">
