--- a/products-actuators-gearboxes.html
+++ b/products-actuators-gearboxes.html
@@ -56,9 +56,9 @@
                         <a href="index.html#recent-projects" class="topbar-link">Recent Projects</a>
                         <a href="#" class="topbar-link">Global Presence</a>
                         <div class="topbar-actions">
-                            <button id="openSearchTop" class="btn btn-secondary" aria-label="Open search"><i class="fas fa-search"></i></button>
-                            <button id="chatToggleTop" class="btn btn-secondary" aria-label="Open chat"><i class="fas fa-headset"></i></button>
-                            <button id="employeeLoginBtn" class="btn btn-outline topbar-login" aria-label="Employee login"><i class="fas fa-user-lock"></i></button>
+                            <button id="openSearchTop" class="btn btn-secondary" aria-label="Open search" aria-expanded="false"><i class="fas fa-search"></i></button>
+                            <button id="chatToggleTop" class="btn btn-secondary" aria-label="Open chat" aria-expanded="false"><i class="fas fa-headset"></i></button>
+                            <button id="employeeLoginBtn" class="btn btn-outline topbar-login" aria-label="Employee login" aria-expanded="false"><i class="fas fa-user-lock"></i></button>
                         </div>
                     </div>
                 </div>
@@ -143,7 +143,7 @@
                         </ul>
                     </li>
                     <li class="nav-search">
-                        <button id="openSearch" class="btn btn-secondary" aria-label="Search products"><i class="fas fa-search"></i></button>
+                        <button id="openSearch" class="btn btn-secondary" aria-label="Search products" aria-expanded="false"><i class="fas fa-search"></i></button>
                     </li>
                     <li class="dropdown">
                         <a href="contact-support-sales.html">Contact <i class="fas fa-chevron-down"></i></a>
@@ -514,7 +514,7 @@
 
     <!-- Chatbot / Technical Support Widget -->
     <div id="chatbot" class="chatbot" aria-hidden="false">
-        <button id="chatToggle" class="chat-toggle" aria-label="Open technical support chat"><i class="fas fa-headset"></i></button>
+        <button id="chatToggle" class="chat-toggle" aria-label="Open technical support chat" aria-expanded="false"><i class="fas fa-headset"></i></button>
         <div id="chatWindow" class="chat-window" hidden>
             <header class="chat-header">
                 <div class="chat-title">Technical Support</div>
