--- a/products-actuators-gearboxes.html
+++ b/products-actuators-gearboxes.html
@@ -142,6 +142,17 @@
                             <li><a href="index.html#recent-projects">Recent Projects</a></li>
                         </ul>
                     </li>
+                    <li class="dropdown">
+                        <a href="careers.html">Careers <i class="fas fa-chevron-down"></i></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="careers.html#openings">Open Positions</a></li>
+                            <li><a href="careers.html#life">Life @ Susin</a></li>
+                            <li><a href="careers.html#benefits">Benefits</a></li>
+                            <li><a href="careers.html#internships">Internships</a></li>
+                            <li><a href="careers.html#apply">How to Apply</a></li>
+                            <li><a href="careers.html#contact-hr">Contact HR</a></li>
+                        </ul>
+                    </li>
                     <li class="nav-search">
                         <button id="openSearch" class="btn btn-secondary" aria-label="Search products" aria-expanded="false"><i class="fas fa-search"></i></button>
                     </li>
